src/objects/Caseset__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for testing custom settings</description>
    <fields>
        <fullName>Need_Dev_Mgr_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Dev Mgr Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Security_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Security Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Security_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Security Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Sol_Arch_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Sol Arch Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Types__c</fullName>
        <label>Resolution Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tiers__c</fullName>
        <label>Tiers</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Case Resolution Type</label>
</CustomObject>